@@ -659,6 +659,8 @@ DIV.subtoc div.toclevel4 {
 <div class='toclevel2'><a href='#_server_side_includes'>Server Side Includes</a></div>
 <div class='toclevel2'><a href='#_cgi_parameters'>CGI Parameters</a></div>
 <div class='toclevel3'><a href='#_list_of_parameters'>List of Parameters</a></div>
+<div class='toclevel2'><a href='#_json_exporting'>JSON Exporting</a></div>
+<div class='toclevel3'><a href='#_list_of_pages'>List of Pages</a></div>
 <div class='toclevel2'><a href='#_sla_reporting'>SLA Reporting</a></div>
 <div class='toclevel3'><a href='#_how_it_works_2'>How it works</a></div>
 <div class='toclevel3'><a href='#_customized_reports'>Customized Reports</a></div>
@@ -19186,6 +19188,34 @@ monitor screens where only the current problems should be displayed.</p></div>
 <div class="paragraph"><p>Description: Sets refresh timer to a custom value.</p></div>
 <div class="paragraph"><p>Example: /thruk/cgi-bin/status.cgi?refresh=30</p></div>
 </div>
+<h2 id="_json_exporting">JSON Exporting</h2>
+<div class="sectionbody">
+<div class="paragraph"><p>There are several pages which offer json exports.</p></div>
+<h3 id="_list_of_pages">List of Pages</h3><div style="clear:left"></div>
+<h4 id="_status_data">Status Data</h4>
+<div class="paragraph"><p>Example: /thruk/cgi-bin/status.cgi?view_mode=json&amp;host=all</p></div>
+<div class="paragraph"><p>Parameters: all usual status page parameters and filter. Use the gui filter
+and then json export link for maximum convenience.</p></div>
+<h4 id="_availability_data">Availability Data</h4>
+<div class="paragraph"><p>Example: /thruk/cgi-bin/avail.cgi?view_mode=json&amp;host=all</p></div>
+<div class="paragraph"><p>Parameters:</p></div>
+<div class="listingblock">
+<div class="content">
+<pre><tt>    t1=1357575984                       # start timestamp
+    t2=1357662384                       # end timestamp
+    host=hostname                       # hostname
+    assumestateretention=yes            # assume state retention or not
+    assumeinitialstates=yes             # assume initial state or not
+    assumestatesduringnotrunning=yes    # assume state during core not running or not
+    initialassumedhoststate=0           # initial assumed host state
+    initialassumedservicestate=0        # initial assumed service state
+    full_log_entries                    # include full logs
+    showscheduleddowntime=
+    rpttimeperiod=</tt></pre>
+</div></div>
+<div class="paragraph"><p>See <a href="http://search.cpan.org/~nierlein/Monitoring-Availability-0.40/lib/Monitoring/Availability.pm#CONSTRUCTOR">Monitoring::Availability</a>
+for a detailed description of all parameters.</p></div>
+</div>
 <h2 id="_sla_reporting">SLA Reporting</h2>
 <div class="sectionbody">
 <h3 id="_how_it_works_2">How it works</h3><div style="clear:left"></div>
@@ -19381,7 +19411,7 @@ of your monitoring core configuration.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2013-01-08 17:11:40 CEST
+Last updated 2013-01-08 17:39:28 CEST
 </div>
 </div>
 </body>
